[gd_scene load_steps=2 format=3 uid="uid://n3t6obwswfao"]

[ext_resource type="Script" uid="uid://dqxg7s8yqg1yh" path="res://scripts/death_screen.gd" id="1_4404p"]

[node name="Death_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4404p")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -199.0
offset_top = 59.000004
offset_right = -57.0
offset_bottom = 120.0
grow_horizontal = 2
scale = Vector2(3, 3)
text = "You died!"
horizontal_alignment = 1

[node name="respawn" type="Button" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 193.0
offset_right = 837.0
offset_bottom = 293.0
text = "Respawn"

[node name="main_menu" type="Button" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 335.0
offset_right = 837.0
offset_bottom = 435.0
text = "Quit to main menu"

[connection signal="pressed" from="respawn" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="main_menu" to="." method="_on_main_menu_pressed"]
